2017-02-10  Michael Wiegand <michael.wiegand@greenbone.net>

	* nasl/exec.c, nasl/nasl_grammar.y: Strip trailing whitespace.

2017-02-09  Juan Jose Nicola  <juan.nicola@greenbone.net>

	Add support for using GLib based logging to OpenVAS Scanner.
	Use g_message instead of log_legacy_write.

	* misc/arglists.c: Define G_LOG_DOMAIN.
	(): Use g_message instead of log_legacy_write.

	* misc/bpf_share.c: Define G_LOG_DOMAIN.
	(): Use g_message instead of log_legacy_write.

	* misc/ids_send.c: Define G_LOG_DOMAIN.
	(): Use g_message instead of log_legacy_write.

	* misc/network.c: Define G_LOG_DOMAIN.
	() Use g_message instead of log_legacy_write.
	(openvas_get_socket_from_connection): Call to log_legacy_fflush
	removed.

	* misc/pcap.c: Define G_LOG_DOMAIN. () Use g_message instead of
	log_legacy_write.

	* misc/plugutils.c: Define G_LOG_DOMAIN. () Use g_message instead of
	log_legacy_write.

	* misc/popen.c: Define G_LOG_DOMAIN. () Use g_message instead of
	log_legacy_write.

	* misc/www_funcs.c: Define G_LOG_DOMAIN. () Use g_message instead of
	log_legacy_write.

	* nasl/charcnv.c: Define G_LOG_DOMAIN. () Use g_message instead of
	log_legacy_write.

	* nasl/exec.c: Define G_LOG_DOMAIN.() Use g_message instead of
	log_legacy_write.

	* nasl.c: Define G_LOG_DOMAIN.

	* nasl/nasl_builtin_find_service.c: Define G_LOG_DOMAIN.
	() Use g_message instead of log_legacy_write.

	* nasl/nasl_builtin_nmap.c: Define G_LOG_DOMAIN. () Use g_message
	instead of log_legacy_write.

	* nasl/nasl_builtin_openvas_tcp_scanner.c: Define G_LOG_DOMAIN.
	() Use g_message instead of log_legacy_write.

	* nasl/nasl_builtin_synscan.c: Define G_LOG_DOMAIN. () Use g_message
	instead of log_legacy_write.

	* nasl/nasl_cert.c: Define G_LOG_DOMAIN. () Use g_message instead of
	log_legacy_write.

	* nasl/nasl_crypto.c: Define G_LOG_DOMAIN. () Use g_message instead of
	log_legacy_write.

	* nasl/nasl_crypto2.c: Define G_LOG_DOMAIN. () Use g_message instead of
	log_legacy_write.
