@@ -1,36 +1,0 @@
-/* openvas-libraries/misc
- * $Id$
- * Description: API for process title setting.
- *
- * Authors:
- * Hani Benhabiles <hani.benhabiles@greenbone.net>
- *
- * Copyright:
- * Copyright (C) 2014 Greenbone Networks GmbH
- *
- * This program is free software; you can redistribute it and/or
- * modify it under the terms of the GNU General Public License
- * as published by the Free Software Foundation; either version 2
- * of the License, or (at your option) any later version.
- *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
- *
- * You should have received a copy of the GNU General Public License
- * along with this program; if not, write to the Free Software
- * Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA.
- */
-
-#ifndef _OPENVAS_PROCTITLE_H
-#define _OPENVAS_PROCTITLE_H
-
-void
-proctitle_init (int, char **);
-
-void
-proctitle_set (const char *, ...);
-
-#endif /* not _OPENVAS_PROCTITLE_H */
-
