@@ -1,3 +1,13 @@
+2017-02-10  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
+
+	Module "openvas_proctitle" is now in gvm-libs/base.
+
+	* misc/openvas_proctitle.c, misc/openvas_proctitle.h: Removed.
+
+	* misc/CMakeLists.txt: Removed handling of this module.
+
+	* COPYING: Remove module from this list.
+
 2017-02-10  Michael Wiegand <michael.wiegand@greenbone.net>
 
 	* nasl/exec.c, nasl/nasl_grammar.y: Strip trailing whitespace.
